# UAkron-3460-440

./: .gitignore  .gitmodules  README.md
cmake/: CheckCXXSymbolExists.cmake
extended-calc/: CMakeLists.txt  ast.cpp  ast.hpp  calc.cpp  cli.cpp  cli.hpp  cli.ipp  config.hpp.in  constants.hpp  lexer.cpp  lexer.hpp  lexer.ipp  lexer_fwd.hpp  numeric_conversions.hpp  parse_error.cpp  parse_error.hpp  parse_error.ipp  parser.cpp  parser.hpp  parser.ipp  parser_fwd.hpp  script.cpp  script.hpp  script.ipp  symbol_traits.cpp  symbol_traits.hpp  symbol_traits.ipp  token.cpp  token.hpp  token.ipp
extended-calc/test/: CMakeLists.txt  input-2.txt  lexer.cpp  parser.cpp
llvm/: strcmp.ll  strcpy.ll  strlen.ll
simple-calc/: CMakeLists.txt  ast.cpp  ast.hpp  calc.cpp  cli.cpp  cli.hpp  cli.ipp  config.hpp.in  constants.hpp  lexer.cpp  lexer.hpp  lexer.ipp  lexer_fwd.hpp  numeric_conversions.hpp  parse_error.cpp  parse_error.hpp  parse_error.ipp  parser.cpp  parser.hpp  parser.ipp  parser_fwd.hpp  script.cpp  script.hpp  script.ipp  symbol_traits.cpp  symbol_traits.hpp  symbol_traits.ipp  token.cpp  token.hpp  token.ipp
simple-calc/test/: CMakeLists.txt  input_1.txt  input_3.txt  input_5.txt  lexer.cpp  parser.cpp
simple-calc/test/libcalc/: CMakeLists.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt  lexer.cpp  parser.cpp
